update icon documentation

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
@@ -25,7 +25,14 @@
           [disabled]="!(formGroup | visibleFields: formStates:true)"
         />
         <span class="e-radio__mark"></span>
-        <span class="e-radio__label">
+        <span
+          class="e-radio__label"
+          [ngClass]="{
+            'e-uppercase': formGroup.labelTypography === 'uppercase',
+            'e-lowercase': formGroup.labelTypography === 'lowercase',
+            'e-capitalize': formGroup.labelTypography === 'capitalize'
+          }"
+        >
           {{ formField.name }}
         </span>
       </label>
