--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
@@ -65,6 +65,9 @@
         &:not(:first-of-type) {
           margin-left: 16px;
         }
+        &:only-child {
+          width: 67%;
+        }
       }
     }
     .ceg-customize-popover {
