--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
@@ -33,7 +33,7 @@
             'e-capitalize': formGroup.labelTypography === 'capitalize'
           }"
         >
-          {{ formField.name }}
+          {{ formField.label ? formField.label : formField.name }}
         </span>
       </label>
     </div>
