Lego 1820: Refactor icon component (#905)
* refactor icon component

* update icon error message

* update icon documentation

* qa fixes

* fix cookie icon

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
@@ -25,8 +25,15 @@
           [disabled]="!(formGroup | visibleFields: formStates:true)"
         />
         <span class="e-radio__mark"></span>
-        <span class="e-radio__label">
-          {{ formField.name }}
+        <span
+          class="e-radio__label"
+          [ngClass]="{
+            'e-uppercase': formGroup.labelTypography === 'uppercase',
+            'e-lowercase': formGroup.labelTypography === 'lowercase',
+            'e-capitalize': formGroup.labelTypography === 'capitalize'
+          }"
+        >
+          {{ formField.label ? formField.label : formField.name }}
         </span>
       </label>
     </div>
