add active state to CEG popover triggers

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
@@ -68,6 +68,9 @@
         &:only-child {
           width: 67%;
         }
+        &.ceg-dropdown-icon {
+          width: 75%;
+        }
       }
     }
     .ceg-customize-popover {
