add minwidth to ceg icon dropdown

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -19,7 +19,7 @@
           (valueOnChange)="updateFormStates('type', $event); updateSelectedType($event)"
         ></elvia-dropdown>
       </div>
-      <div *ngIf="iconsOptions.length !== 0 && !typesData" class="ceg-dropdown">
+      <div *ngIf="iconsOptions.length !== 0 && !typesData" class="ceg-dropdown ceg-dropdown-icon">
         <elvia-dropdown
           [items]="iconsOptions"
           [value]="defaultIcon"
