revert test label trigger

--- a/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
@@ -16,7 +16,7 @@
     <ng-container ngProjectAs="sectionContent">
       There are two different sizes of the date picker; normal and compact. Much like compact text fields, the
       compact date picker picker is a version of the text field that’s primarily designed for internal
-      systems, and shouldn’t be mixed with the other input style. Test triggering label.
+      systems, and shouldn’t be mixed with the other input style.
     </ng-container>
   </app-component-section>
 
