rework sidebar blur

--- a/packages/web/src/app/shell/navbar/navbar.component.html
+++ b/packages/web/src/app/shell/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="navbar" id="side-navbar" (scroll)="updateNavbarBlur()">
+  <div class="navbar navbar-bottom-blur" id="side-navbar" (scroll)="updateNavbarBlur()">
     <div *ngIf="!isLoaded">
       <span class="e-content-loader" style="height: 50vh; width: 100%"></span>
     </div>
