--- a/packages/web/src/app/shell/navbar/navbar.component.scss
+++ b/packages/web/src/app/shell/navbar/navbar.component.scss
@@ -169,6 +169,10 @@ $text-line-height: 32px;
   }
 }
 
+:root {
+  --navbar-blur-amount: 80%;
+}
+
 .navbar-bottom-blur {
-  mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
+  mask-image: linear-gradient(to bottom, black var(--navbar-blur-amount), transparent 100%);
 }
