--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,15 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-box
-        [hasBorder]="true"
-        inlineStyle="{ backgroundColor: 'teal', borderRadius: '8px', padding: '10px' }"
-      >
-        <h3 slot="title">Title</h3>
-        <div slot="content">Webcomponentent content for the box component</div>
-      </elvia-box>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
