Lego-990: add JSON5 to parse object props in wrapper (#913)
* add JSON5 to parse object props in wrapper

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -141,10 +141,10 @@
     <h3>DatePicker</h3>
     <elvia-datepicker [value]="date"></elvia-datepicker>
   </div>
-  <!--Date ramnge picker-->
+  <!--Date range picker-->
   <div class="example-wrapper">
     <h3>Date range picker</h3>
-    <elvia-datepicker-range (errorOnChange)="logValue('error', $event.detail.value)"></elvia-datepicker-range>
+    <elvia-datepicker-range></elvia-datepicker-range>
   </div>
 
   <!--Divider-->
