--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
@@ -32,3 +32,10 @@
   max-height: 500px;
   overflow-y: scroll;
 }
+
+.properties-filter {
+  margin-top: -40px;
+  margin-left: auto;
+  margin-bottom: 8px;
+  width: 50%;
+}
