add sticky row header property table

--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="e-table-container desktop">
     <table
-      class="e-table e-table--sticky-column-header e-table--compact"
+      class="e-table e-table--sticky-column-header e-table--sticky-header e-table--compact"
       *ngIf="componentProps"
       aria-label="Properties details and descriptions"
     >
