--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
@@ -19,6 +19,9 @@
         <div *ngIf="figmaOnly">
           <label class="e-label e-label--orange">Figma only</label>
         </div>
+        <div *ngIf="!figmaOnly && lastUpdated" class="doc-page-heading__date e-text-micro-light">
+          Last updated {{ lastUpdated }}
+        </div>
       </div>
       <div class="component-header__description component-header-description-animation">
         <span class="e-text-lead" #contentWrapper>
