--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.scss
@@ -31,6 +31,10 @@
           display: flex;
           align-self: center;
         }
+        @include breakpoint-up(Mobile) {
+          flex-direction: column;
+          align-items: flex-start;
+        }
       }
     }
     &__description {
