fix mobile search field width, use ngModelChange instead of keyup

--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -7,7 +7,7 @@
           type="search"
           placeholder="Filter properties"
           [(ngModel)]="searchTerm"
-          (keyup)="searchProps()"
+          (ngModelChange)="searchProps()"
         />
       </div>
       <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
