--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
@@ -40,6 +40,19 @@
   width: 50%;
 }
 
+.no-properties-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  padding: 16px;
+
+  width: 100%;
+  & img {
+    width: 100px;
+  }
+}
+
 @media (max-width: 768px) {
   .properties-filter {
     width: 100%;
